Fix mobile overflow

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -29,6 +29,10 @@ h1, h2 {
   font-family: 'Limelight', cursive;
 }
 
+.fit-vertical {
+  height: auto;
+}
+
 .blur {
   background-color: #d0b0a7;
   //add with javascript
